# iberspeech_2026

./: LICENSE  Makefile  README.md  pyproject.toml
scripts/: baseline_asr.py  baseline_sd.py  coser_labels_to_rttm.py  explore_coser_data.py
src/: __init__.py  cli.py
src/asr/: __init__.py  infer_long.py  lid.py  logit_bias.py  nbest.py  nonspeech_mask.py  w2v2_ft.py  whisper_ft.py
src/bench/: __init__.py  ablation.py  asr_baseline.py  cv_es.py  cv_multilingual.py  sd_baseline.py  stage0_ablation.py  synth_coser.py  synth_coser_runner.py  synthetic.py  voxconverse.py
src/configs/: infer_asr.yaml  infer_sd.yaml  sd_seg_ft.yaml  stage0_beats.yaml  w2v2_ft.yaml  whisper_ft.yaml
src/data/: __init__.py  audio.py  ingest.py  normalize.py  pseudo_label.py  stage0.py  stage0_beats.py
src/eval/: __init__.py  leaderboard.py  score_asr.py  score_sd.py
src/fusion/: __init__.py  lm_kenlm.py  lm_neural.py  mbr.py  rover.py
src/sd/: __init__.py  cluster_vbx.py  embed.py  overlap.py  pipeline.py  refine.py  seg_ft.py
tests/: test_asr_lid.py  test_audio_chunking.py  test_bench_ablation.py  test_bench_cv_multilingual.py  test_bench_stage0_ablation.py  test_bench_synth_coser.py  test_bench_synthetic.py  test_infer_long.py  test_leaderboard.py  test_logit_bias.py  test_mbr.py  test_nonspeech_mask.py  test_normalize.py  test_pseudo_label.py  test_refine.py  test_rover.py  test_score_asr.py
