[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iberspeech_2026"
version = "0.0.1"
description = "Repo for the UVigo-Balidea submitions on the ALBAYZIN 2026"
authors = [
  { name = "Jose Manuel Ramirez" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

